--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
     <div id="es-rc">
       <div class="es-garnier" id="es-garnier">
-        <section class="es-kv">
+        <div class="es-kv">
           <div class="es-kv__container">
             <div class="es-kv__content">
               <div class="es-kv__logo">
@@ -39,7 +38,7 @@
               <p class="es-kv__subtitle">Dla skóry mieszanej i tłustej</p>
             </div>
           </div>
-        </section>
+        </div>
 
         <div class="es-boxes">
           <div class="es-boxes__container">
@@ -87,7 +86,7 @@
           </div>
         </div>
 
-        <section class="es-intro">
+        <div class="es-intro">
           <div class="es-intro__container">
             <div class="es-intro__ampoule">
               <img
@@ -112,9 +111,9 @@
               </p>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="es-ingredients">
+        <div class="es-ingredients">
           <h3 class="es-ingredients__title">Składniki aktywne</h3>
           <div class="es-ingredients__container">
             <div class="es-ingredients__content">
@@ -186,9 +185,9 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="es-benefits">
+        <div class="es-benefits">
           <div class="es-benefits__container">
             <div class="es-benefits__packshot">
               <img
@@ -252,9 +251,9 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="es-apply">
+        <div class="es-apply">
           <h3 class="es-apply__title">Sposób użycia</h3>
           <div class="es-apply__container">
             <div class="es-apply__step">
@@ -297,7 +296,7 @@
               </p>
             </div>
           </div>
-        </section>
+        </div>
 
         <div class="es-slider">
           <h3 class="es-slider__title">
@@ -383,7 +382,7 @@
           </div>
         </div>
 
-        <section class="es-info">
+        <div class="es-info">
           <div class="es-info__container es-info__container--second">
             <div class="es-info__photo">
               <img
@@ -411,14 +410,13 @@
                   <li class="es-info__point">Twoja skóra wymaga intensywnego nawilżenia przez 24h*</li>
                 </ul>
                 <a href="" class="es-info__link">sprawdź</a>
-
                 <p class="es-info__test">*Test instrumentalny, 24 kobiety</p>
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="es-cross">
+        <div class="es-cross">
           <div class="es-cross__wrapper">
             <h3 class="es-cross__title">pełna gama produktów</h3>
             <div class="swiper-cross es-cross__slider">
@@ -705,9 +703,9 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="es-footer">
+        <div class="es-footer">
           <p class="es-footer__disclaimer">
             *Poprzez wzrost nawilżenia skóry<br />
             **Test instrumentalny, 24 kobiety
@@ -735,7 +733,7 @@
               />
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </div>
     <script src="./js/swiper.js"></script>
